--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_SERVER=http://localhost:5000/api
+REACT_APP_API_SERVER=http://stage-api.crossborderpickup.com
 REACT_APP_API_RECAPTCHA=6LFBuauuajua78as7v7sd7as6sa6sa8c86as
